--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1138,8 +1138,8 @@
     <string name="tutorial_traits_visibility_title">Trait Visibility</string>
     <string name="tutorial_traits_visibility_description">Traits can be disabled from collection by toggling the checkbox.</string>
     <string name="shutter_capture_content_description">Shutter button for snapping a picture.</string>
-    <string name="dialog_ask_high_contrast_title">Switch to High Contrast Theme?</string>
-    <string name="dialog_ask_high_contrast_message">eInk device was detected, we suggest switching to the high contrast theme for an optimal experience</string>
+    <string name="dialog_ask_high_contrast_title">High Contrast Theme</string>
+    <string name="dialog_ask_high_contrast_message">Enable to a high contrast theme with better visibility on eInk devices.</string>
     <string name="dialog_geonav_prefs_sensor_missing_title">Required sensor missing</string>
     <string name="dialog_geonav_prefs_sensor_missing_message">The trapezoidal method requires an accelerometer and gyroscope to use compass input.</string>
     <string name="trait_audio_button_content_description">Controls recording audio.</string>
