--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1119,6 +1119,27 @@
     <string name="brapi_programs_activity_title">Choose your Program</string>
     <string name="import_brapi_title">BrAPI Import</string>
     <string name="menu_action_brapi_filter">Filter</string>
-    <string name="brapi_program_filter_title">Programs</string>
 
+    <string name="act_brapi_filter_apply">Filter</string>
+    <string name="act_brapi_filter_import">Import</string>
+    <string name="act_brapi_filter_clear">Clear</string>
+
+    <string name="dialog_brapi_filter_title">Filters</string>
+    <string name="dialog_brapi_filter_active">Active</string>
+    <string name="dialog_brapi_filter_choices_title">Filter By</string>
+
+    <string name="brapi_studies_filter_title">Studies</string>
+    <string name="brapi_trials_filter_title">Trials</string>
+    <string name="brapi_filter_dialog_title">Filter By</string>
+    <string name="brapi_filter_type_program">Program</string>
+    <string name="brapi_filter_type_season">Season</string>
+    <string name="brapi_filter_type_trial">Trial</string>
+    <string name="brapi_filter_type_crop">Crop</string>
+    <string name="brapi_importer_search_hint">Search Text</string>
+    <string name="act_brapi_filter_by_title">Filter By: %s</string>
+    <string name="check_all">Check All Filters</string>
+    <string name="menu_action_brapi_filter_clear_all">Clear all filters</string>
+    <string name="brapi_filter_error">Something went wrong querying for %s</string>
+    <string name="brapi_importer_fetch_data">Fetching data, the first run may take a minute.</string>
+    <string name="menu_filter_brapi_reset_cache_title">Reset</string>
 </resources>
