--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
 
     <!-- Warnings/Catches -->
     <string name="warning_field_missing">No field is currently loaded. Please load a field before collecting data.</string>
-    <string name="warning_traits_missing">No traits exist. Please create traits before collecting data.</string>
+    <string name="warning_traits_missing">No active traits. Please create and/or activate traits before collecting data.</string>
 
     <!-- Changelog -->
     <string name="changelog_title">Changelog</string>
