--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -620,9 +620,10 @@
     <string name="preferences_profile_name_error">Both fields cannot be blank</string>
 
     <string name="preferences_profile_require_interval_title">Verification Interval</string>
-    <string name="ask_user_interval_every_open">Every time app opens</string>
-    <string name="ask_user_interval_every_12">Every 12 hours</string>
-    <string name="ask_user_interval_every_24">Every 24 hours</string>
+    <string name="verification_interval_every_open">Every time app opens</string>
+    <string name="verification_interval_every_12">Every 12 hours</string>
+    <string name="verification_interval_every_24">Every 24 hours</string>
+    <string name="verification_interval_never">Never</string>
 
     <string name="preferences_profile_crashlytics" translatable="false">Crashlytics</string>
     <string name="pref_profile_crashlytics_user_id_enabled">Unique ID</string>
