--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1142,4 +1142,18 @@
     <string name="brapi_filter_error">Something went wrong querying for %s</string>
     <string name="brapi_importer_fetch_data">Fetching data, the first run may take a minute.</string>
     <string name="menu_filter_brapi_reset_cache_title">Reset</string>
+    <string name="brapi_filter_bottom_sheet_delete_all_description">clear all filters</string>
+    <string name="act_brapi_study_import_fetch_levels">Fetching observation levels...</string>
+    <string name="act_brapi_study_import_fetch_variables">Fetching variables for %s...</string>
+    <string name="act_brapi_study_import_fetch_units">Fetching observation units for %s...</string>
+    <string name="act_brapi_study_import_fetch_germplasm">Fetching germplasm for %s...</string>
+    <string name="act_brapi_list_filter_loading_trials">Loading trials, please wait.</string>
+    <string name="act_brapi_list_filter_loading_studies">Loading studies, please wait.</string>
+    <string name="act_brapi_list_filter_loading_complete">Complete</string>
+    <string name="act_brapi_list_filter_error_multiple_programs">Please select studies from the same program.</string>
+    <string name="act_brapi_study_import_saving">Saving...</string>
+    <plurals name="act_brapi_list_filter">
+        <item quantity="one">%s result</item>
+        <item quantity="other">%s results</item>
+    </plurals>
 </resources>
