--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1152,6 +1152,9 @@
     <string name="act_brapi_list_filter_loading_complete">Complete</string>
     <string name="act_brapi_list_filter_error_multiple_programs">Please select studies from the same program.</string>
     <string name="act_brapi_study_import_saving">Saving...</string>
+    <string name="act_brapi_study_import_title">Study Import</string>
+    <string name="select">Select</string>
+    <string name="results">results</string>
     <plurals name="act_brapi_list_filter">
         <item quantity="one">%s result</item>
         <item quantity="other">%s results</item>
