--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1182,6 +1182,7 @@
     <string name="brapi_traits_filter_title">Traits</string>
     <string name="brapi_filter_type_study">Study</string>
     <string name="act_brapi_study_filter">Filter</string>
+    <string name="act_brapi_trait_preprocess_title">Field Book Format Chooser</string>
     <plurals name="act_brapi_list_filter">
         <item quantity="one">%s result</item>
         <item quantity="other">%s results</item>
