--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1017,6 +1017,7 @@
     <string name="brapi_export_unknown_error">ERROR: Unknown Error</string>
     <string name="brapi_export_successful">BrAPI Export Successful</string>
     <string name="brapi_saving_indicator">Saving Observations…</string>
+    <string name="brapi_field_non_matching_sources_title">Sources Do Not Match</string>
     <string name="brapi_field_non_matching_sources">Unable to sync data. Field data originates from, %1$s, BrAPI url currently set to %2$s. Sources must match.</string>
     <string name="brapi_enable_before_sync">BRAPI is disabled. Please enable it in settings before using sync.</string>
     <string name="brapi_trait_already_exists">Trait already exists: %1$s. Not saving.</string>
