--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1266,4 +1266,10 @@
         <item quantity="one">%s result</item>
         <item quantity="other">%s results</item>
     </plurals>
+
+    <string name="brapi_filter_type_program_count">Program (%s)</string>
+    <string name="brapi_filter_type_season_count">Season (%s)</string>
+    <string name="brapi_filter_type_trial_count">Trial (%s)</string>
+    <string name="brapi_filter_type_crop_count">Crop (%s)</string>
+    <string name="brapi_filter_type_study_count">Study (%s)</string>
 </resources>
