--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1120,5 +1120,6 @@
     <string name="oauth_configured_incorrectly">Authorization request failed, please check your BrAPI settings.</string>
     <string name="export_util_repeated_measures_table_warning_title">Repeated Measures Table</string>
     <string name="export_util_repeated_measures_table_warning_message">Only the latest repeated measures value will be exported in table format.</string>
+    <string name="activity_file_explorer_up_directory_name">Up</string>
 
 </resources>
