--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1255,6 +1255,7 @@
     <string name="act_brapi_list_filter_reset_cache_message">This will delete local BrAPI data used for searching and importing.</string>
     <string name="search_bar_hint">Searching… %s</string>
     <string name="menu_filter_brapi_clear_filters">Clear Filters</string>
+    <string name="menu_filter_brapi_clear_selection">Clear Selection</string>
     <string name="level">Level</string>
     <string name="primary">Primary</string>
     <string name="secondary">Secondary</string>
@@ -1277,4 +1278,5 @@
     <string name="pref_alpha_enhanced_brapi_import_summary">When enabled, a new BrAPI import UI will be used for studies and traits.</string>
     <string name="pref_alpha_brapi_import_title">New BrAPI Import UI</string>
     <string name="opening_brapi_no_network_error">Networking must be enabled to use BrAPI features.</string>
+    <string name="act_brapi_list_filter_reset_selection_message">This will clear the running list of selected items.</string>
 </resources>
