--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1376,4 +1376,7 @@
     <string name="act_brapi_list_filter_reset_selection_message">This will clear the running list of selected items.</string>
     <string name="pref_alpha_media_keycode_events_summary">Enable to use media commands for app interactions</string>
     <string name="pref_alpha_media_keycode_events_title">Enable Media Commands</string>
+    <string name="pref_geonav_distance_threshold_summary">GeoNav automatically stops when distance from all plots exceeds this value in kilometers.</string>
+    <string name="pref_geonav_distance_threshold_title">Proximity Check</string>
+    <string name="activity_collect_proximity_warning">GeoNav Stopping, outside proximity of coordinates</string>
 </resources>
