--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -854,6 +854,12 @@
     <string name="database_reset_message">Database has been deleted</string>
     <string name="share_file_title">Sending file…</string>
 
+
+    <string name="preferences_storage_settings_title">Settings</string>
+    <string name="preferences_system_defaults_reset">Reset Settings</string>
+    <string name="reset_preferences_title">Reset Settings to Default</string>
+    <string name="reset_preferences_message">Warning: this will reset all of Field Book\'s preferences.</string>
+
     <!-- Experimental -->
     <string name="preferences_experimental_title">Experimental</string>
     <string name="preferences_experimental_stable_title">Stable</string>
@@ -1380,7 +1386,5 @@
     <string name="pref_geonav_distance_threshold_summary">GeoNav automatically stops when distance from all plots exceeds this value in kilometers.</string>
     <string name="pref_geonav_distance_threshold_title">Proximity Check</string>
     <string name="activity_collect_proximity_warning">GeoNav Stopping, outside proximity of coordinates</string>
-    <string name="preferences_system_defaults_reset">Reset Settings</string>
-    <string name="reset_preferences_title">Reset Settings to Default</string>
-    <string name="reset_preferences_message">Warning: this will reset all of Field Book\'s preferences.</string>
+
 </resources>
