--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -587,6 +587,7 @@
     <string name="export_content_traits_all">All traits</string>
     <string name="export_content_traits_active">Only active traits</string>
     <string name="export_error_general">Error during export</string>
+    <string name="error_storage_directory">Storage directory is missing or corrupted.</string>
     <string name="export_error_data_missing">No data exists to export</string>
     <string name="export_complete">Export complete</string>
     <string name="export_progress">Exporting…</string>
@@ -1386,5 +1387,6 @@
     <string name="pref_geonav_distance_threshold_summary">GeoNav automatically stops when distance from all plots exceeds this value in kilometers.</string>
     <string name="pref_geonav_distance_threshold_title">Proximity Check</string>
     <string name="activity_collect_proximity_warning">GeoNav Stopping, outside proximity of coordinates</string>
+    <string name="no_suitable_file_manager_was_found">No suitable File Manager was found.</string>
 
 </resources>
